Solucionado metodo realizarCompra() en el simulador y más cambios